--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "a-shader-studio",
+  "name": "shader-studio",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.4.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
