chore: improve SEO and add keywords for GitHub

--- a/package.json
+++ b/package.json
@@ -2,6 +2,34 @@
   "name": "shader-studio",
   "private": true,
   "version": "1.4.0",
+  "description": "High-performance interactive web application for creating, customizing, and exporting stunning procedural shaders using React, Three.js, and GLSL.",
+  "keywords": [
+    "shader",
+    "glsl",
+    "procedural",
+    "threejs",
+    "react",
+    "webgl",
+    "generative-art",
+    "creative-coding",
+    "gradient",
+    "animation",
+    "interactive",
+    "gpu-accelerated",
+    "vfx",
+    "visual-effects",
+    "design-tools",
+    "export-gif",
+    "export-video",
+    "procedural-generation",
+    "mathematical-art"
+  ],
+  "author": "Muhanned Amged",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MuhannedAmged/Shader-Studio.git"
+  },
   "type": "module",
   "scripts": {
     "dev": "vite",
