--- a/package.json
+++ b/package.json
@@ -50,7 +50,10 @@
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.19",
     "gif.js": "^0.2.0",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
